--- a/src/components/module/cards/displayCard/displayCard.module.scss
+++ b/src/components/module/cards/displayCard/displayCard.module.scss
@@ -6,10 +6,28 @@
   flex-direction: column;
   gap: rem(24);
   cursor: pointer;
+
+  @include breakpoint-max-width(rem(768)) {
+    width: 100%;
+    height: rem(336);
+  }
+
+  .imgContainer {
+    position: relative;
+    width: 100%;
+    height: rem(301);
+
+    @include breakpoint-max-width(rem(768)) {
+      width: 100%;
+      height: rem(224);
+    }
+  }
   .storyImg {
     border-top-left-radius: rem(16);
     border-bottom-right-radius: rem(16);
     object-fit: cover;
+    // width: 100%;
+    // height: 100%;
   }
 
   .displayCardInfo {
