fix: filename consistency, dummydata consistency

--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets//styles/main.scss";
+@import "./../../../assets/styles/main.scss";
 
 .headerContainer {
   height: rem(156);
