--- a/src/components/rendering/footer/footer.module.scss
+++ b/src/components/rendering/footer/footer.module.scss
@@ -64,7 +64,7 @@
       display: flex;
       flex-direction: column;
       gap: rem(10);
-      margin-top: rem(20);
+      // margin-top: rem(20);
     }
 
     .label {
@@ -111,7 +111,7 @@
     @include body_light;
     color: getColorHex("green-metallic");
     font-size: rem(14);
-    margin-top: rem(40);
+    margin-top: rem(48);
 
     @include lg {
       font-size: rem(16);
@@ -167,7 +167,7 @@
     display: flex;
     gap: rem(20);
     cursor: pointer;
-    margin-top: rem(24);
+    margin-top: rem(30);
     svg {
       width: rem(16);
       height: rem(16);
