--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -3,26 +3,19 @@
 .accordian {
   display: flex;
   flex-direction: column;
-  // gap: rem(20);
   transition: all 0.3s;
-
-  // &:hover .accordianContainer {
-  //   height: 100%;
-  // }
 }
 
 .accordianContainer {
   display: flex;
   flex-direction: column;
-  gap: rem(22);
   transition: all 0.3s;
   height: 0;
   overflow: hidden;
-  // padding: rem(20 0);
 }
 
 .activeAccordian {
-  height: 100vh;
+  height: 100%;
 }
 
 .activeArrow {
