--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -1,4 +1,4 @@
-@import "./../../../../assets//styles/main.scss";
+@import "./../../../../assets/styles/main.scss";
 
 .storyCardContainer {
   display: flex;
@@ -9,6 +9,10 @@
 
   @include breakpoint-max-width(rem(768)) {
     width: 100%;
+    height: 100% !important;
+  }
+  @include breakpoint-max-width(rem(360)) {
+    flex-direction: column;
   }
 
   .imgContainer {
@@ -18,6 +22,11 @@
     @include breakpoint-max-width(rem(768)) {
       width: rem(146);
       height: rem(96);
+    }
+
+    @include breakpoint-max-width(rem(360)) {
+      width: 100%;
+      // height: 100%;
     }
   }
 
@@ -32,6 +41,10 @@
     flex-direction: column;
     gap: rem(12);
     width: rem(188);
+
+    @include breakpoint-max-width(rem(360)) {
+      width: 100%;
+    }
 
     .title {
       @include heading_regular;
