--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -96,12 +96,26 @@
         padding: rem(7 0);
         cursor: pointer;
         color: getColorHex("green-dark");
-        border-bottom: rem(2) solid getColorHex("green-dark", 0);
+        // border-bottom: rem(2) solid getColorHex("green-dark", 0);
         @include heading_regular;
-        transition: all 0.2s;
+        transition: all 0.3s;
 
-        &:hover {
-          border-bottom: rem(2) solid getColorHex("green-dark");
+        // &:hover {
+        //   border-bottom: rem(2) solid getColorHex("green-dark");
+        // }
+
+        &::after {
+          margin-top: rem(7);
+          content: "";
+          display: block;
+          width: 0;
+          height: rem(2);
+          background-color: getColorHex("green-dark");
+          transition: width 0.3s;
+        }
+
+        &:hover::after {
+          width: 100%;
         }
       }
 
