--- a/src/components/module/mobileHeader/mobileHeader.module.scss
+++ b/src/components/module/mobileHeader/mobileHeader.module.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets//styles//main.scss";
+@import "./../../../assets/styles/main.scss";
 
 .position {
   background-color: getColorHex("white");
