--- a/src/components/module/tabContent/tabContent.module.scss
+++ b/src/components/module/tabContent/tabContent.module.scss
@@ -1,84 +1,6 @@
-@import "./../../../assets//styles/main.scss";
+@import "./../../../assets/styles/main.scss";
 
-.tabsContainer {
-  display: flex;
-  flex-direction: column;
-  gap: rem(28);
-
-  .tabs {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: rem(0);
-    margin: rem(0 28);
-    border-bottom: rem(1) solid getColorHex("grey-light-3");
-
-    .tab {
-      @include heading_medium;
-      color: getColorHex("brown-grey");
-      text-transform: uppercase;
-      width: 100%;
-      text-align: center;
-      font-size: rem(14);
-      line-height: rem(20);
-      letter-spacing: rem(0.6);
-      cursor: pointer;
-      padding: rem(16);
-      border-bottom: rem(2) solid getColorHex("green-dark", 0);
-    }
-  }
-}
-
-.activeTab {
-  border-bottom: rem(2) solid getColorHex("green-dark") !important;
-  color: getColorHex("green-dark") !important;
-}
-
-.subMenu {
-  display: flex;
-  flex-direction: column;
-  gap: rem(24);
-}
-
-.navigationLink {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: rem(7 0);
-  cursor: pointer;
-  color: getColorHex("green-dark");
-  border-bottom: rem(2) solid getColorHex("green-dark", 0);
-  @include heading_regular;
-  transition: all 0.2s;
-}
-
-.appointmentBtn {
-  padding: rem(4 0);
-  border-bottom: rem(1) solid getColorHex("green-dark");
-  color: getColorHex("green-dark");
-  // max-width: rem(250);
-  width: max-content;
-  cursor: pointer;
-  @include body_regular;
-}
-
-.recommendContainer {
-  display: flex;
-  flex-direction: column;
-  gap: rem(16);
-  .recommendText {
-    text-transform: uppercase;
-    @include heading_medium;
-  }
-
-  .logos {
-    display: flex;
-    align-items: center;
-    gap: rem(20);
-  }
-}
-
+// PROUDCTS AND EXPLORE
 .tabContent {
   padding: rem(28);
 }
@@ -91,26 +13,8 @@
   .mobileMenuNavigationContainer {
     display: flex;
     flex-direction: column;
-    // gap: rem(20);
     transition: all 0.3s;
-
-    &:hover .subMenuContainer {
-      height: 100%;
-    }
   }
-}
-
-.mobileMenuNavigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: rem(7 0);
-  cursor: pointer;
-  color: getColorHex("green-dark");
-  border-bottom: rem(2) solid getColorHex("green-dark", 0);
-  @include heading_regular;
-  transition: all 0.3s;
 }
 
 .subMenuContainer {
@@ -120,13 +24,16 @@
   transition: all 0.3s;
   height: 0;
   overflow: hidden;
-  // padding: rem(20 0);
+}
+
+.gap {
+  gap: rem(40);
 }
 
 .subMenu {
   display: flex;
   flex-direction: column;
-  gap: rem(28);
+  gap: rem(24);
   padding: rem(20 12);
 }
 
@@ -138,11 +45,9 @@
   @include body_regular;
 }
 
-.bottom {
-  display: flex;
-  flex-direction: column;
-  margin-top: rem(40);
-  gap: rem(44);
+.customContainer {
+  height: 100% !important;
+  gap: rem(40) !important;
 }
 
 .displayCardsTitle {
@@ -150,8 +55,10 @@
   @include heading_regular;
   line-height: rem(20);
   letter-spacing: rem(0.4);
+
+  margin-bottom: -10px;
 }
 
-.removePadding {
+.padZero {
   padding: 0 !important;
 }
