fix: accordion sub menu, update components

--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -9,7 +9,7 @@
 
   @include breakpoint-max-width(rem(768)) {
     width: 100%;
-    height: 100% !important;
+    height: 100%;
   }
   @include breakpoint-max-width(rem(360)) {
     flex-direction: column;
