--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -9,13 +9,9 @@
 .accordianContainer {
   display: flex;
   flex-direction: column;
-  transition: all 0.3s;
+  transition: all 0.5s ease-in-out;
   height: 0;
   overflow: hidden;
-}
-
-.activeAccordian {
-  height: 100%;
 }
 
 .activeArrow {
