fix: stylename consistency

--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -1,12 +1,12 @@
 @import "./../../../assets/styles/main.scss";
 
-.accordian {
+.accordion {
   display: flex;
   flex-direction: column;
   transition: all 0.3s;
 }
 
-.accordianContainer {
+.accordionContainer {
   display: flex;
   flex-direction: column;
   transition: all 0.5s ease-in-out;
@@ -19,7 +19,7 @@
   transform: rotate(180deg);
 }
 
-.accordianLink {
+.accordionLink {
   display: flex;
   align-items: center;
   justify-content: space-between;
