--- a/src/components/module/mobileHeader/mobileHeader.module.scss
+++ b/src/components/module/mobileHeader/mobileHeader.module.scss
@@ -2,9 +2,10 @@
 
 .position {
   background-color: getColorHex("white");
-  // position: fixed;
-  // width: 100%;
-  // left: 0;
-  // z-index: 9999;
-  // top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+  top: 0;
+  height: rem(120);
+  transition: all 0.3s ease-in-out;
 }
