--- a/src/components/module/tabbedNavigation/tabbedNavigation.module.scss
+++ b/src/components/module/tabbedNavigation/tabbedNavigation.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: rem(28);
+  overflow: hidden;
+  transition: all 0.5s;
 
   .tabs {
     display: flex;
