--- a/src/components/module/headerFooter/headerFooter.module.scss
+++ b/src/components/module/headerFooter/headerFooter.module.scss
@@ -9,3 +9,12 @@
   width: 100%;
   flex-wrap: wrap;
 }
+
+.footerNavigation {
+  cursor: pointer;
+  font-weight: 400;
+  font-size: rem(14);
+  line-height: rem(22);
+  letter-spacing: rem(0.4);
+  color: getColorHex("green-dark");
+}
