fix: font styles

--- a/src/components/module/tabContent/tabContent.module.scss
+++ b/src/components/module/tabContent/tabContent.module.scss
@@ -43,6 +43,12 @@
   justify-content: space-between;
   text-transform: uppercase;
   @include body_regular;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: rem(14);
+  line-height: rem(22);
+  letter-spacing: rem(0.4);
+  color: getColorHex("green-dark");
 }
 
 .customContainer {
