--- a/src/components/module/megaMenu/megaMenu.module.scss
+++ b/src/components/module/megaMenu/megaMenu.module.scss
@@ -50,6 +50,12 @@
   margin-bottom: rem(28);
   text-transform: uppercase;
   @include body_regular;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: rem(14);
+  line-height: rem(22);
+  letter-spacing: rem(0.4);
+  color: getColorHex("green-dark");
 }
 
 // megamenu right side cards
