--- a/src/components/module/tabContent/tabContent.module.scss
+++ b/src/components/module/tabContent/tabContent.module.scss
@@ -62,6 +62,7 @@
   line-height: rem(20);
   letter-spacing: rem(0.4);
   margin-bottom: rem(-10);
+  color: getColorHex("green-dark");
 }
 
 .padZero {
