--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -23,11 +23,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
 
+.headerLink {
   padding: rem(7 0);
   cursor: pointer;
   color: getColorHex("green-dark");
   border-bottom: rem(2) solid getColorHex("green-dark", 0);
   @include heading_regular;
   transition: all 0.3s;
+  font-weight: 400;
+  font-size: rem(16);
+  line-height: rem(20);
+  letter-spacing: rem(0.4);
 }
