--- a/src/components/module/cards/displayCard/displayCard.module.scss
+++ b/src/components/module/cards/displayCard/displayCard.module.scss
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     gap: rem(8);
+    line-height: rem(22);
     .title {
       color: getColorHex("green-metallic");
       letter-spacing: rem(0.4);
