--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -4,25 +4,25 @@
   display: flex;
   flex-direction: column;
   transition: all 0.3s;
-}
 
-.accordionContainer {
-  display: flex;
-  flex-direction: column;
-  transition: all 0.5s ease-in-out;
-  height: 0;
-  overflow: hidden;
+  &Container {
+    display: flex;
+    flex-direction: column;
+    transition: height 0.5s ease-in-out;
+    height: 0;
+    overflow: hidden;
+  }
+
+  &Link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .activeArrow {
-  transition: all 0.3s;
+  transition: transform 0.3s;
   transform: rotate(180deg);
-}
-
-.accordionLink {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .headerLink {
