--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -27,8 +27,7 @@
   }
 
   .image {
-    border-top-left-radius: rem(16);
-    border-bottom-right-radius: rem(16);
+    border-radius: rem(16 0 16 0);
     object-fit: cover;
   }
 
