--- a/src/components/module/megaMenu/megaMenu.module.scss
+++ b/src/components/module/megaMenu/megaMenu.module.scss
@@ -1,39 +1,34 @@
 @import "./../../../assets/styles/main.scss";
 
-// mega menu
 .megaMenuContainer {
   display: flex;
-  justify-content: space-between;
-  transition: all 0.3s;
   flex-direction: column;
+  position: fixed;
+  top: rem(156);
+  left: 0;
+  z-index: 2000;
+  width: 100%;
+  background-color: getColorHex("white");
+  transition: all 0.3s;
 
   @include breakpoint-max-width(rem(1150)) {
     padding: rem(30 60);
-    flex-direction: column;
   }
 
-  position: fixed;
-  top: rem(156);
-  z-index: 2000;
-  width: 100%;
-  left: 0;
-  background-color: getColorHex("white");
-
   .columns {
-    width: 100%;
     display: flex;
     justify-content: space-between;
+    width: 100%;
     padding: rem(60 120);
 
     @include breakpoint-max-width(rem(1150)) {
-      gap: rem(20);
       flex-direction: column;
+      gap: rem(20);
     }
 
     .menuLeft {
       display: flex;
       gap: rem(87);
-      justify-content: space-between;
     }
   }
 }
@@ -45,20 +40,19 @@
 .menuLink {
   display: flex;
   align-items: center;
-  width: rem(217);
   justify-content: space-between;
+  width: rem(217);
   margin-bottom: rem(28);
-  text-transform: uppercase;
   @include body_regular;
-  cursor: pointer;
+  text-transform: uppercase;
   font-weight: 400;
   font-size: rem(14);
   line-height: rem(22);
   letter-spacing: rem(0.4);
   color: getColorHex("green-dark");
+  cursor: pointer;
 }
 
-// megamenu right side cards
 .displayCardsContainer {
   display: flex;
   flex-direction: column;
@@ -76,34 +70,27 @@
 
   @include breakpoint-max-width(rem(1612)) {
     flex-direction: column;
-    // justify-content: flex-end;
   }
 
-  .column1 {
-    display: flex;
-    flex-direction: column;
-    gap: rem(12);
-
-    .storyCardContainer {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: rem(22);
-    }
-  }
-
+  .column1,
   .column2 {
-    gap: rem(12);
-
     display: flex;
     flex-direction: column;
+    gap: rem(12);
+  }
+
+  .column1 .storyCardContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: rem(22);
   }
 }
 
 .displayCardsTitle {
-  font-size: rem(16);
   @include heading_regular;
+  font-size: rem(16);
   line-height: rem(20);
   letter-spacing: rem(0.4);
   color: getColorHex("green-dark");
