--- a/src/components/module/cards/displayCard/displayCard.module.scss
+++ b/src/components/module/cards/displayCard/displayCard.module.scss
@@ -39,12 +39,14 @@
       text-transform: uppercase;
       font-size: rem(14);
       @include body_regular;
+      @include ellipses;
     }
 
     .subTitle {
-      @include heading_regular;
       color: getColorHex("green-dark");
       font-size: rem(16);
+      @include heading_regular;
+      @include ellipses;
     }
   }
 }
