--- a/src/components/module/languageSelector/languageSelector.module.scss
+++ b/src/components/module/languageSelector/languageSelector.module.scss
@@ -3,7 +3,7 @@
 .selection {
   display: flex;
   flex-direction: column;
-  gap: rem(10);
+  // gap: rem(10);
   margin-top: rem(20);
 }
 
@@ -11,8 +11,8 @@
   @include heading_light;
   font-size: rem(14);
   color: getColorHex("green-dark");
-  margin-bottom: rem(5);
-  @include lg {
+  // margin-bottom: rem(5);
+  @include md {
     font-size: rem(16);
   }
 }
@@ -23,7 +23,7 @@
   padding: rem(10 0 10 0);
   cursor: pointer;
   border: none;
-  @include lg {
+  @include md {
     padding: rem(13 0 13 0);
   }
 }
@@ -45,7 +45,7 @@
     @include body_light;
     color: getColorHex("green-metallic");
     font-size: rem(12);
-    @include lg {
+    @include md {
       font-size: rem(14);
     }
   }
