--- a/src/components/rendering/footer/footer.module.scss
+++ b/src/components/rendering/footer/footer.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   padding: rem(0 28 0 28);
 
-  @include lg {
+  @include md {
     padding: rem(0 60 0 60);
   }
   .container {
@@ -21,29 +21,15 @@
     margin: rem(48 0);
     background-color: getColorHex("white");
 
-    @include lg {
+    @include md {
       margin: rem(80 0);
       grid-template-columns: 1.3fr 1fr 1fr 1fr;
       grid-template-areas: "logo links1 links2 links3";
     }
   }
-  .languageSelectorTop {
-    display: none;
-  }
+ 
 
-  .languageSelectorBottom {
-    display: block;
-    margin-bottom: rem(48);
-  }
-
-  @include lg {
-    .languageSelectorTop {
-      display: block;
-    }
-    .languageSelectorBottom {
-      display: none;
-    }
-  }
+  
   .column {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -54,7 +40,7 @@
       cursor: pointer;
     }
 
-    @include lg {
+    @include md {
       display: flex;
       flex-direction: column;
       gap: rem(36);
@@ -100,7 +86,7 @@
   .column[style*="logo"] {
     margin-bottom: rem(48);
 
-    @include lg {
+    @include md {
       margin-bottom: rem(0);
     }
   }
@@ -113,7 +99,7 @@
     font-size: rem(14);
     margin-top: rem(48);
 
-    @include lg {
+    @include md {
       font-size: rem(16);
       gap: rem(20);
       margin-top: 0;
@@ -122,7 +108,7 @@
   .column[style*="links2"] {
     margin-top: rem(20);
 
-    @include lg {
+    @include md {
       margin-top: 0;
     }
   }
@@ -133,7 +119,7 @@
     font-size: rem(22);
     color: getColorHex("green-dark");
 
-    @include lg {
+    @include md {
       font-size: rem(26);
     }
   }
@@ -148,7 +134,7 @@
     align-items: center;
     flex-direction: column;
     margin: rem(40 0 40 0);
-    @include lg {
+    @include md {
       margin: rem(28 0 28 0);
       flex-direction: row;
     }
@@ -158,7 +144,7 @@
     @include body_light;
     font-size: rem(12);
     color: getColorHex("green-metallic");
-    @include lg {
+    @include md {
       font-size: rem(16);
     }
   }
@@ -172,7 +158,7 @@
       width: rem(16);
       height: rem(16);
     }
-    @include lg {
+    @include md {
       margin-top: 0;
       gap: rem(16);
     }
