update: card styles, conditionals

--- a/src/components/module/cards/displayCard/displayCard.module.scss
+++ b/src/components/module/cards/displayCard/displayCard.module.scss
@@ -38,6 +38,8 @@
       letter-spacing: rem(0.4);
       text-transform: uppercase;
       font-size: rem(14);
+      margin: rem(0);
+
       @include body_regular;
       @include ellipses;
     }
