--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -50,6 +50,7 @@
       font-size: rem(16);
       line-height: rem(20);
       letter-spacing: rem(0.4);
+      margin: rem(0);
 
       @include ellipses;
 
