--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -22,6 +22,7 @@ $colors: (
   "grey-light": #e9e8e3,
   "grey-light-2": #f8f8f8,
   "grey-light-3": #e9e6e3,
+  "grey-light-4": #d2cbc2,
   "grey-tint": #f6f5f2,
 
   "blue": #0033a0,
