integrated grid extension data

--- a/src/components/module/cards/productCard/productCard.module.scss
+++ b/src/components/module/cards/productCard/productCard.module.scss
@@ -30,7 +30,7 @@
     background-color: getColorHex("green-greyish");
     display: inline-block;
     padding: rem(6 12);
-    gap: 10px;
+    gap: rem(10);
     border-radius: rem(4);
     cursor: pointer;
 
