--- a/src/components/module/filterBar/filterBar.module.scss
+++ b/src/components/module/filterBar/filterBar.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     gap: rem(10);
+    flex-wrap: wrap;
   }
 
   .productsLength {
@@ -19,6 +20,7 @@
     line-height: rem(22);
     letter-spacing: rem(0.4);
     text-align: left;
+    min-width: rem(85);
   }
 }
 
