--- a/src/components/module/filterBtn/filterBtn.module.scss
+++ b/src/components/module/filterBtn/filterBtn.module.scss
@@ -3,10 +3,9 @@
 .container {
   display: flex;
   align-items: center;
-  padding: 8px 12px 8px 12px;
+  padding: rem(8 12);
   border-radius: rem(5);
   border: rem(1) solid #E9E8E3;
-  opacity: 0px;
   cursor: pointer;
   gap: rem(10);
 
@@ -14,7 +13,7 @@
 
   .text {
     @include body_regular;
-    font-size: 14px;
+    font-size: rem(14);
     font-weight: 400;
     line-height: rem(22);
     letter-spacing: rem(.4);
