fix: css styles

--- a/src/components/module/filterBtn/filterBtn.module.scss
+++ b/src/components/module/filterBtn/filterBtn.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   padding: rem(8 12);
   border-radius: rem(5);
-  border: rem(1) solid #E9E8E3;
+  border: rem(1) solid getColorHex("grey-light");
   cursor: pointer;
   gap: rem(10);
 
