added sidedrawer and updated code

--- a/src/components/module/priceRangeFilter/priceRangeFilter.module.scss
+++ b/src/components/module/priceRangeFilter/priceRangeFilter.module.scss
@@ -1,11 +1,11 @@
 @import "../../../assets/styles/main.scss";
 .container {
   width: 100%; 
-  max-width: 374px;
+//   max-width: 374px;
   margin: auto;
   padding: 24px 16px;
-  background-color: #fff;
-  border: 1px solid #e1e1e1;
+//   background-color: #fff;
+//   border: 1px solid #e1e1e1;
 }
 
 .heading {
