--- a/src/components/module/accordion/accordion.module.scss
+++ b/src/components/module/accordion/accordion.module.scss
@@ -32,9 +32,9 @@
   border-bottom: rem(2) solid getColorHex("green-dark", 0);
   @include heading_regular;
   transition: all 0.3s;
-  font-weight: 400;
-  font-size: rem(18);
-  line-height: rem(20);
-  letter-spacing: rem(0.4);
+  font-size: rem(14);
   text-transform: uppercase;
+  @include md {
+    font-size: rem(16);
+  }
 }
