moved code to module file

--- a/src/components/module/priceRangeFilter/priceRangeFilter.module.scss
+++ b/src/components/module/priceRangeFilter/priceRangeFilter.module.scss
@@ -32,6 +32,9 @@
     font-size: rem(12);
     color: getColorHex("grey");
   }
+  .rightAligned {
+    text-align: right;
+  }
 }
 
 .rangeSlider {
