--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -73,3 +73,26 @@ strong {
 .no-scroll {
   overflow: hidden;
 }
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff00;
+  
+  
+}
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
