--- a/src/components/rendering/twoColumnImageCopy/twoColumnImageCopy.module.scss
+++ b/src/components/rendering/twoColumnImageCopy/twoColumnImageCopy.module.scss
@@ -22,6 +22,8 @@
     .image {
       border-radius: rem(16 0);
       object-fit: cover;
+      width: rem(502);
+      height: rem(700);
     }
   }
 }
