--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -20,15 +20,18 @@
     width: rem(160);
     height: rem(109);
 
-    @include breakpoint-max-width(rem(360)) {
-      width: 100%;
-      height: 100%;
-    }
   }
 
   .image {
     border-radius: rem(16 0 16 0);
     object-fit: cover;
+    width: rem(160);
+    height: rem(109);
+
+    @include breakpoint-max-width(rem(360)) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .content {
