all filter implementation

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -23,6 +23,7 @@ $colors: (
   "grey-light-2": #f8f8f8,
   "grey-light-3": #e9e6e3,
   "grey-light-4": #d2cbc2,
+  "grey-light-5": #CCCBC7,
   "grey-tint": #f6f5f2,
 
   "blue": #0033a0,
