--- a/src/components/module/allFilters/priceRangeFilter/priceRangeFilter.module.scss
+++ b/src/components/module/allFilters/priceRangeFilter/priceRangeFilter.module.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/styles/main.scss";
+@import "../../../../assets/styles/main.scss";
 .container {
   width: 100%;
   //   max-width: 374px;
@@ -39,8 +39,8 @@
 
 .rangeSlider {
   .renderThumb {
-    height: 15px;
-    width: 15px;
+    height: rem(15);
+    width: rem(15);
     border-radius: 50%;
     background-color: getColorHex("black");
     box-shadow: 0 rem(2) rem(6) rgba(0, 0, 0, 0.3);
