hide scroll from sidedrawer

--- a/src/components/module/sideDrawer/sideDrawer.module.scss
+++ b/src/components/module/sideDrawer/sideDrawer.module.scss
@@ -28,6 +28,14 @@
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  scrollbar-width: none;
+
+  -ms-overflow-style: none;
 }
 
 .footer {
@@ -49,7 +57,7 @@
   @include md {
     margin-bottom: rem(32);
   }
-  h5 { 
+  h5 {
     font-size: rem(16);
     margin: 0;
     @include md {
@@ -57,7 +65,6 @@
     }
   }
 }
-
 
 .closeButton {
   cursor: pointer;
