--- a/src/components/module/checkboxFilter/checkboxFilter.module.scss
+++ b/src/components/module/checkboxFilter/checkboxFilter.module.scss
@@ -1,17 +1,19 @@
 @import "./../../../assets/styles/main.scss";
 
-.container {
-  // padding: 16px 0;
-}
-
 .searchBar {
   display: flex;
   align-items: center;
-  margin-bottom: rem(32);
+  margin-bottom: rem(20);
   border-bottom: rem(1) solid getColorHex("grey-light-5");
   padding: rem(13 0);
+  @include md {
+    margin-bottom: rem(32); 
+  }
   .searchIcon {
-    margin-right: rem(15);
+    margin-right: rem(12);
+    @include md {
+      margin-right: rem(20); 
+    }
   }
 
   .searchInput {
@@ -19,8 +21,11 @@
     outline: none;
     flex: 1;
     @include body_regular;
-    font-size: rem(14);
+    font-size: rem(12);
     color: getColorHex("green-metallic");
+    @include md {
+      font-size: rem(14);
+    }
   }
 }
 
@@ -51,7 +56,7 @@
   .checkboxTickbox {
     position: absolute;
     width: 100%;
-    height: 100%; 
+    height: 100%;
   }
 
   .tickIcon {
