--- a/src/components/module/allFilters/allFIlters.module.scss
+++ b/src/components/module/allFilters/allFIlters.module.scss
@@ -12,8 +12,11 @@
   cursor: pointer;
 
   .title {
-    font-size: rem(14);
+    font-size: rem(12);
     color: getColorHex("grey");
+    @include md {
+      font-size: rem(14);
+    }
   }
 }
 
