--- a/src/components/module/allFilters/allFIlters.module.scss
+++ b/src/components/module/allFilters/allFIlters.module.scss
@@ -32,6 +32,9 @@
   width: rem(20);
   height: rem(20);
   margin-right: rem(8);
+  [dir="rtl"] & {
+    margin-left: rem(8);
+  }
 }
 
 .radioEllipse {
