--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -6,12 +6,12 @@
   height: rem(109);
   cursor: pointer;
 
-  @include breakpoint-max-width(rem(768)) {
+  @include md-max {
     width: 100%;
     height: 100%;
   }
 
-  @include breakpoint-max-width(rem(360)) {
+  @include md-max {
     flex-direction: column;
   }
 
@@ -28,7 +28,7 @@
     width: rem(160);
     height: rem(109);
 
-    @include breakpoint-max-width(rem(360)) {
+    @include md-max {
       width: 100%;
       height: 100%;
     }
@@ -40,11 +40,11 @@
     gap: rem(12);
     width: rem(220);
 
-    @include breakpoint-max-width(rem(768)) {
+    @include md-max {
       width: rem(188);
     }
 
-    @include breakpoint-max-width(rem(360)) {
+    @include md-max {
       width: 100%;
     }
 
@@ -57,7 +57,7 @@
 
       @include ellipses;
 
-      @include breakpoint-max-width(rem(768)) {
+      @include md-max {
         font-size: rem(14);
       }
     }
@@ -69,7 +69,7 @@
       line-height: rem(22);
       @include ellipses;
 
-      @include breakpoint-max-width(rem(768)) {
+      @include md-max {
         font-size: rem(12);
       }
     }
