--- a/src/components/module/cards/articleCard/articleCard.module.scss
+++ b/src/components/module/cards/articleCard/articleCard.module.scss
@@ -1,8 +1,8 @@
 @import "./../../../../assets/styles/main.scss";
 
 .articleCard {
-  width: rem(473);
-  height: rem(315);
+  width: 100%;
+  height: rem(224);
   padding: rem(30);
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,9 +18,9 @@
   position: relative;
   overflow: hidden;
 
-  @include md-max {
-    width: 100%;
-    height: rem(224);
+  @include md {
+    width: rem(473);
+    height: rem(315);
   }
 
   .backgroundFade {
