--- a/src/components/module/cards/displayCard/displayCard.module.scss
+++ b/src/components/module/cards/displayCard/displayCard.module.scss
@@ -1,35 +1,35 @@
 @import "./../../../../assets/styles/main.scss";
 
 .displayCard {
-  width: rem(226);
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: rem(24);
   cursor: pointer;
 
-  @include md-max {
-    width: 100%;
-    height: 100%;
+  @include md {
+    width: rem(226);
   }
 
   .imgContainer {
     position: relative;
-    width: 100%;
-    height: rem(301);
+    height: rem(224);
 
-    @include md-max {
-      height: rem(224);
+    @include md {
+      width: 100%;
+      height: rem(301);
     }
   }
 
   .storyImg {
     border-radius: rem(16 0 16 0);
     object-fit: cover;
+    height: rem(224);
     width: 100%;
-    height: rem(301);
 
-    @include md-max {
-      height: rem(224);
+    @include md {
+      height: rem(301);
     }
   }
 
