--- a/src/components/module/cards/storyCard/storyCard.module.scss
+++ b/src/components/module/cards/storyCard/storyCard.module.scss
@@ -3,34 +3,32 @@
 .storyCardContainer {
   display: flex;
   gap: rem(20);
-  height: rem(109);
   cursor: pointer;
 
-  @include md-max {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+
+  @include md {
+    height: rem(109);
   }
 
-  @include md-max {
-    flex-direction: column;
+  flex-direction: column;
+  @include sm {
+    flex-direction: row;
   }
 
   .imgContainer {
     position: relative;
     width: rem(160);
     height: rem(109);
-
   }
 
   .image {
     border-radius: rem(16 0 16 0);
     object-fit: cover;
-    width: rem(160);
-    height: rem(109);
-
-    @include md-max {
-      width: 100%;
-      height: 100%;
+    @include sm {
+      width: rem(160);
+      height: rem(109);
     }
   }
 
@@ -38,39 +36,37 @@
     display: flex;
     flex-direction: column;
     gap: rem(12);
-    width: rem(220);
 
-    @include md-max {
-      width: rem(188);
-    }
+    width: 100%;
 
-    @include md-max {
-      width: 100%;
+    @include sm {
+      width: rem(220);
     }
 
     .title {
       @include heading_regular;
-      font-size: rem(16);
+
+      font-size: rem(14);
       line-height: rem(20);
       letter-spacing: rem(0.4);
       margin: rem(0);
 
       @include ellipses;
 
-      @include md-max {
-        font-size: rem(14);
+      @include md {
+        font-size: rem(16);
       }
     }
 
     .subtitle {
       @include body_light;
       color: getColorHex("green-dark");
-      font-size: rem(14);
+      font-size: rem(12);
       line-height: rem(22);
       @include ellipses;
 
-      @include md-max {
-        font-size: rem(12);
+      @include md {
+        font-size: rem(14);
       }
     }
   }
